--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "mysql2": "^3.14.0",
-    "redis": "^4.7.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.8.1",
