--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
     "mysql2": "^3.14.0",
+    "openai": "^4.93.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.8.1",
