--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
     "mysql2": "^3.14.0",
+    "node-redis-warlock": "^1.0.2",
     "openai": "^4.93.0",
+    "redlock": "^5.0.0-beta.2",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.8.1",
