--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "proxy": "http://127.0.0.1:8001",
   "dependencies": {
+    "@fireworks-js/react": "^2.10.8",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
