--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "node-redis-warlock": "^1.0.2",
     "openai": "^4.93.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "redlock": "^5.0.0-beta.2",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2",
